<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.youngershopping.ui.home.ui2.ui.home.HomeFragment2"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home2" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.youngershopping.ui.home.ui2.ui.cart.CartFragment2"
        android:label="@string/Cart"
        tools:layout="@layout/fragment_cart2" />

    <fragment
        android:id="@+id/nav_offer"
        android:name="com.youngershopping.ui.home.ui2.ui.offer.OfferFragment"
        android:label="@string/account_Offers"
        tools:layout="@layout/fragment_offer2" />

</navigation>